tests/snapshots/render__corpus_gfm_md_80x24.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga gfm.md                                                              1/43
┌──────────────────────────────┐┌──────────────────────────────────────────────█
│FILES search outline links    ││# GFM features                                █
│26 entries                    ││                                              █
│▸ .github                     ││## A table with mixed alignment               █
│▸ docs                        ││                                              █
│▸ spaces and #hash            ││┌─────────────┬────────┬───────┐              █
│  broken-links.md             │││ Left        │ Centre │ Right │              █
│  crlf.md                     ││├─────────────┼────────┼───────┤              █
│  empty.md                    │││ a           │   b    │     c │              █
│  frontmatter-only.md         │││ longer cell │   x    │ 12345 │              █
│● gfm.md                      ││└─────────────┴────────┴───────┘              █
│  invalid-utf8.md             ││                                              ║
│  no-trailing-newline.md      ││## A task list                                ║
│  README.md                   ││                                              ║
│  unicode.md                  ││- ☑ a finished task                           ║
│  wide.md                     ││- ☐ an unfinished task                        ║
│                              ││                                              ║
│                              ││## Deeply nested lists                        ║
│                              ││                                              ║
│                              ││- one                                         ║
│                              ││    - two                                     ║
└──────────────────────────────┘└──────────────────────────────────────────────║
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find
