tests/snapshots/render__corpus_unicode_md_40x10.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga unicode.md                  1/18
┌──────────────────┐───────────────────█
│FILES search      │                   █
│outline links     │                   █
│26 entries        │                   ║
│  README.md       │                   ║
│● unicode.md      │, şema, İstanbul,  ║
│  wide.md         │                   ║
└──────────────────┘───────────────────║
 READ
