tests/snapshots/render__corpus_unicode_md_80x24.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga unicode.md                                                          1/16
┌──────────────────────────────┐┌──────────────────────────────────────────────┐
│FILES search outline links    ││# Unicode                                     │
│31 entries                    ││                                              │
│▸ .github                     ││## Kurulum Kılavuzu                           │
│▸ docs                        ││                                              │
│▸ spaces and #hash            ││Türkçe metin: ölçüm, şema, İstanbul, ığdır.   │
│  anchors.md                  ││                                              │
│  broken-links.md             ││## 日 本 語 の 見 出 し                              │
│  crlf.md                     ││                                              │
│  cycle-a.md                  ││日 本 語 の テ キ ス ト は 一 文 字 あ た り 二 列 を 占 め ま す 。 │
│  cycle-b.md                  ││こ れ は 折 り 返 し の 計 算 に 影 響 し ま す 。             │
│  empty.md                    ││                                              │
│  frontmatter-only.md         ││## Emoji 🎉                                    │
│  gfm.md                      ││                                              │
│  invalid-utf8.md             ││A line with emoji: 🎉  🚀  ✅  — and text after  │
│  no-trailing-newline.md      ││them.                                         │
│  outside.md                  ││                                              │
│  README.md                   ││                                              │
│● unicode.md                  ││                                              │
│  wide.md                     ││                                              │
│  wiki.md                     ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 READ  Tab file tree  H/L history  f links  Ctrl+B hide sidebar  Ctrl+O switch
