tests/snapshots/render__corpus_wide_md_120x40.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga wide.md                                                                                                     1/14
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│FILES search outline links    ││# Wide content                                                                        │
│31 entries                    ││                                                                                      │
│▸ .github                     ││A fenced code block with a line far wider than any terminal:                          │
│▸ docs                        ││                                                                                      │
│▸ spaces and #hash            ││aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa…│
│  anchors.md                  ││                                                                                      │
│  broken-links.md             ││A very wide table:                                                                    │
│  crlf.md                     ││                                                                                      │
│  cycle-a.md                  ││┌────────────┬────────────┬──────────────┬─────────────┬─────────────┬────────────┐   │
│  cycle-b.md                  │││ column one │ column two │ column three │ column four │ column five │ column six │   │
│  empty.md                    ││├────────────┼────────────┼──────────────┼─────────────┼─────────────┼────────────┤   │
│  frontmatter-only.md         │││ value one  │ value two  │ value three  │ value four  │ value five  │ value six  │   │
│  gfm.md                      ││└────────────┴────────────┴──────────────┴─────────────┴─────────────┴────────────┘   │
│  invalid-utf8.md             ││                                                                                      │
│  no-trailing-newline.md      ││                                                                                      │
│  outside.md                  ││                                                                                      │
│  README.md                   ││                                                                                      │
│  unicode.md                  ││                                                                                      │
│● wide.md                     ││                                                                                      │
│  wiki.md                     ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  Tab file tree  H/L history  f links  Ctrl+B hide sidebar  Ctrl+O switch  Ctrl+F find  ? help
