tests/snapshots/render__corpus_wide_md_40x10.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga wide.md                     1/15
┌──────────────────┐───────────────────█
│FILES search      │                   █
│outline links     │                   █
│31 entries        │ with a line far   █
│  unicode.md      │inal:              ║
│● wide.md         │                   ║
│  wiki.md         │aaaaaaaaaaaaaaaaaa…║
└──────────────────┘───────────────────║
 READ
