tests/snapshots/render__corpus_wide_md_80x24.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga wide.md                                                             1/15
┌──────────────────────────────┐┌──────────────────────────────────────────────┐
│FILES search outline links    ││# Wide content                                │
│30 entries                    ││                                              │
│▸ .github                     ││A fenced code block with a line far wider     │
│▸ docs                        ││than any terminal:                            │
│▸ spaces and #hash            ││                                              │
│  anchors.md                  ││aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa…│
│  broken-links.md             ││                                              │
│  crlf.md                     ││A very wide table:                            │
│  cycle-a.md                  ││                                              │
│  cycle-b.md                  ││┌────────────┬────────────┬──────────────┬───…│
│  empty.md                    │││ column one │ column two │ column three │ co…│
│  frontmatter-only.md         ││├────────────┼────────────┼──────────────┼───…│
│  gfm.md                      │││ value one  │ value two  │ value three  │ va…│
│  invalid-utf8.md             ││└────────────┴────────────┴──────────────┴───…│
│  no-trailing-newline.md      ││                                              │
│  outside.md                  ││                                              │
│  README.md                   ││                                              │
│  unicode.md                  ││                                              │
│● wide.md                     ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find
