tests/snapshots/render__files_all_files.snap
---
source: tests/render.rs
expression: "frame(&mut app, 120, 40)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│FILES search outline links    ││                                                                                      │
│30 entries                    ││                                                                                      │
│▸ .github                     ││                                                                                      │
│▸ docs                        ││                                                                                      │
│▸ spaces and #hash            ││                                                                                      │
│  .gitignore                  ││                                                                                      │
│  anchors.md                  ││                                                                                      │
│  broken-links.md             ││                                                                                      │
│  crlf.md                     ││                       ██████  ███████ ██████   ██████   █████                        │
│  cycle-a.md                  ││                       ██   ██ ██      ██   ██ ██       ██   ██                       │
│  cycle-b.md                  ││                       ██████  █████   ██████  ██   ███ ███████                       │
│  empty.md                    ││                       ██      ██      ██   ██ ██    ██ ██   ██                       │
│  frontmatter-only.md         ││                       ██      ███████ ██   ██  ██████  ██   ██                       │
│  gfm.md                      ││                                                                                      │
│  invalid-utf8.md             ││                                      perga 0.1.0                                     │
│  loop                        ││                                                                                      │
│  no-trailing-newline.md      ││                                Ctrl+O   find a document                              │
│  outside.md                  ││                                 Ctrl+B   toggle sidebar                              │
│  README.md                   ││                                     ?   all keybindings                              │
│  unicode.md                  ││                                                                                      │
│  wide.md                     ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  All files
