tests/snapshots/render__files_filtered.snap
---
source: tests/render.rs
expression: "frame(&mut app, 120, 40)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│FILES search outline links    ││                                                                                      │
│31 entries                    ││                                                                                      │
│/auth                         ││                                                                                      │
│▾ docs                        ││                                                                                      │
│  ▾ api                       ││                                                                                      │
│      auth.md                 ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                       ██████  ███████ ██████   ██████   █████                        │
│                              ││                       ██   ██ ██      ██   ██ ██       ██   ██                       │
│                              ││                       ██████  █████   ██████  ██   ███ ███████                       │
│                              ││                       ██      ██      ██   ██ ██    ██ ██   ██                       │
│                              ││                       ██      ███████ ██   ██  ██████  ██   ██                       │
│                              ││                                                                                      │
│                              ││                                      perga #####                                     │
│                              ││                                                                                      │
│                              ││                                 Tab   focus the file tree                            │
│                              ││                                Ctrl+O   find a document                              │
│                              ││                                Ctrl+B   hide the sidebar                             │
│                              ││                                     ?   all keybindings                              │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  Tab file tree  H/L history  f links  Ctrl+B hide sidebar  Ctrl+O switch  Ctrl+F find  ? help
